--- a/Map.html
+++ b/Map.html
@@ -3,7 +3,7 @@
 
 <head>
 
-	<title>Map of Münster</title>
+	<title>Safe Route</title>
 
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -42,7 +42,7 @@
 <body>
 
 	<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-		<a class="navbar-brand" href="/">Safe route</a>
+		<a class="navbar-brand" href="/">Safe Route</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		  </button>
@@ -50,7 +50,7 @@
 			<div class="navbar-nav">
 			  <a class="nav-item nav-link active" href="/">Home <span class="sr-only">(current)</span></a>
 			  <a class="nav-item nav-link" href="/howto">How-To</a>
-			  <a class="nav-item nav-link" href="/impressum">Impressum</a>
+			  <a class="nav-item nav-link" href="/imprint">Imprint</a>
 			</div>
 		  </div>
 	  </nav>
