--- a/HowTo.html
+++ b/HowTo.html
@@ -58,6 +58,20 @@
 
 
 	<div class="explanations">
+		<button class="collapsible">What is the application Safe Route about?</button>
+		<div class="content">
+			<p>An application to avoid accidents on your routes through the city of Münster. 
+				After submitting the route, different routes can be selected that avoid different risk areas where accidents are more likely to occur in Münster. 
+				All routes are displayed on a map, and it is possible to view additional statistics and to export the routes to Google Maps.
+			</p>
+		</div>
+		<button class="collapsible">Is there a short way to get an overview about the application?</button>
+		<div class="content">
+			<p> We created a short video, so that you can get an first impression of Safe Route. <br>
+				<!--<iframe width="420" height="345" src="TODO">
+				</iframe>-->
+			</p>
+		</div>
 		<button class="collapsible">What do the accident markers represent? </button>
 		<div class="content">
 			<p>The accident markers represent accidents happened in Münster in 2019.
