initial activate "highlight start finish" checkbox

--- a/Map.html
+++ b/Map.html
@@ -98,7 +98,7 @@
 							</tr>
 							<tr>
 								<td><button id="submit" class="button btn btn-primary">Submit</button></td>
-								<td><input type="checkbox" name="markers" value="higlight">  Highlight start and finish&nbsp;&nbsp;</td>
+								<td><input type="checkbox" name="markers" value="higlight" checked="checked">  Highlight start and finish&nbsp;&nbsp;</td>
 							</tr>
 						</table>
 						</div>
