--- a/HowTo.html
+++ b/HowTo.html
@@ -68,8 +68,7 @@
 		<button class="collapsible">Is there a short way to get an overview about the application?</button>
 		<div class="content">
 			<p> We created a short video, so that you can get an first impression of Safe Route. <br>
-				<!--<iframe width="420" height="345" src="TODO">
-				</iframe>-->
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/HxnhPnuCwDE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</p>
 		</div>
 		<button class="collapsible">What do the accident markers represent? </button>
